Arbol y select modificado

--- a/Proyecto-Integrador-master/src/html/vista-admi.html
+++ b/Proyecto-Integrador-master/src/html/vista-admi.html
@@ -135,7 +135,6 @@
           <br>
           <br>
           <textarea placeholder="Información" id="info" class="info"> </textarea></div>      
-          
           <br>
           
           <br>
@@ -143,10 +142,11 @@
             <option >Seleccione una opción</option>
             <option value="Odontología">Odontología</option>
             <option value="Cardiología">Cardiología</option>
-            <option value="Nutriologo">Nutriologo</option>
-            <option value="Neorocirujano">Neorocirujano</option>
+            <option value="Nutrición">Nutrición</option>
+            <option value="Otorrinolaringología ">Otorrinolaringología</option>
+            <option value="Neurocirujano">Neurocirujano</option>
             <option value="Psicología">Psicología</option>
-            <option value="Dematología">Dermatología</option>
+            <option value="Dermatología">Dermatología</option>
             <option value="Nefrología">Nefrología</option>
           </select>
           <br><br><br>
