--- a/Proyecto-Integrador-master/src/html/vista-usuario.html
+++ b/Proyecto-Integrador-master/src/html/vista-usuario.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../src/Bootstrap5/css/bootstrap.css">
     <link rel="stylesheet" href="../../src/css/vista-usuario.css">
   </head>
-<body onload="visualizarDoctores();">
+<body onload="visualizarDoctores()">
     <header>
         <div class="item" id="principal">
 
@@ -104,13 +104,10 @@
         </select>
       -->
       <select class="select-48" aria-label="Default select example" id="especiDoctor">
-        <option selected>Seleccione la especialidad</option>
+        <option>Seleccione la especialidad</option>
     </select>
     <select class="select-48" aria-label="Default select example" id="nombresDoctor">
     </select>
-
-
-        
         <input id="btnSubir" type="button" value="Enviar" class="btn-enviar">
 
           </div>
