div con forma, base de datos actualizada

--- a/Proyecto-Integrador-master/src/html/vista-usuario.html
+++ b/Proyecto-Integrador-master/src/html/vista-usuario.html
@@ -113,6 +113,7 @@
           </div>
 
         </form>
+        <button id="btnCrearPdf">Crear PDF</button>
     </div>
     <script>
       window.$=window.jQuery= require("../../libs/jquery.js");
