--- a/Proyecto-Integrador-master/src/html/pacientes-admi.html
+++ b/Proyecto-Integrador-master/src/html/pacientes-admi.html
@@ -6,6 +6,9 @@
     <script src="../../src/js/register-user.js"></script>
     <link rel="stylesheet" href="../css/vista-admi.css">
     <script src="../../src/js/arbolito.js " ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css"></script>
+<script src="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+  </script>
     <script src="https://kit.fontawesome.com/ca99133e94.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Pacientes</title>
@@ -13,7 +16,7 @@
 <header>
   <div class="item" id="principal">
 
-      <nav class="navbar navbar-expand-lg text-bg-main ">
+      <nav class="navbar navbar-expand-lg text-bg-main">
           <div class="container-fluid">
             <a class="navbar-brand" href="../../src/html/index.html#principal"><img src="../../src/images/logo-clinica.png" width="100" height="60"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,9 +50,8 @@
   </div>
 </header>
 <body onload="agregarCitas()">
-    <!-- <a href="./vista-admi.html">REGRESAR</a> -->
     <div class="col-md-6 p-4 my-auto">
-        <table  class="table table-dark table-hover table-striped" id="Tabla">
+        <table  class="table table-light table-striped" id="Tabla">
           <tr>
             <th>Id</th>
             <th>Médico</th>
