--- a/Proyecto-Integrador-master/src/html/vista-admi.html
+++ b/Proyecto-Integrador-master/src/html/vista-admi.html
@@ -54,7 +54,7 @@
 
   
     <div id="div">
-
+      <div id="div2"></div>
     </div>
 <!--   <div class="circulo1">
     <b>Ángel Clemente</b>
@@ -142,7 +142,7 @@
             <option >Seleccione una opción</option>
             <option value="Odontología">Odontología</option>
             <option value="Cardiología">Cardiología</option>
-            <option value="Nutrición">Nutrición</option>
+            <option value="Nutriólogo">Nutrición</option>
             <option value="Otorrinolaringología ">Otorrinolaringología</option>
             <option value="Neurocirujano">Neurocirujano</option>
             <option value="Psicología">Psicología</option>
